add functionality, better debugability